--- a/_assets/sass/components/_buttons.scss
+++ b/_assets/sass/components/_buttons.scss
@@ -1,21 +1,23 @@
 .btn {
   position: relative;
   display: inline-block;
-  padding: $s2 $s5;
+  padding: $s1 $s4;
   color: $white;
   font-weight: 700;
   font-size: $s-1;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: .25em;
-  line-height: 1.33;
+  letter-spacing: .2em;
   border-radius: 3px;
   cursor: pointer;
   @include transition;
-  &--sm { padding: $s1 $s4; font-size: $s-2; }
-  &--lg { padding: $s3 $s8; font-size: $s-1; }
+  &--sm { padding: $s0 $s3; font-size: $s-2; }
+  &--lg { padding: $s2 $s6; font-size: $s-1; }
   &--orange { background-color: $orange;
     &:hover { background-color: $orange-dark; }
+  }
+  &--turquoise { background-color: $turquoise;
+    &:hover { background-color: $turquoise-dark; }
   }
   &--outline {
     color: inherit;
@@ -33,11 +35,20 @@
       @include transition;
     }
   }
-  &--outline-orange {
-    &:before { border-color: $orange; }
+  &--outline-orange { color: $orange;
+    &:before { border-color: $orange;}
     &:hover {
+      color: $white;
       background-color: $orange;
       &:before { border-color: $orange; }
+    }
+  }
+  &--outline-turquoise { color: $turquoise;
+    &:before { border-color: $turquoise; }
+    &:hover {
+      color: $white;
+      background-color: $turquoise;
+      &:before { border-color: $turquoise; }
     }
   }
 }
