--- a/_assets/sass/components/_modal.scss
+++ b/_assets/sass/components/_modal.scss
@@ -91,8 +91,8 @@
       &:hover     { background-color: $black; }
     }
   }
-  &--standard { max-width: $xl; }
-  &--series   { max-width: $xl; }
+  &--standard { max-width: $xxl; }
+  &--series   { max-width: $xxxl; }
   &--image    { max-width: $xxl; }
   &--youtube  {
     width: 100%;
