--- a/_assets/sass/core/_colours.scss
+++ b/_assets/sass/core/_colours.scss
@@ -1,17 +1,22 @@
-$white:          #fff;
-$grey-lightest:  #f2f5f7;
-$grey-lighter:   #dadcdf;
-$grey-light:     #a1a5a9;
-$grey:           #74787d;
-$grey-dark:      #47484a;
-$grey-darker:    #2e2e2e;
-$grey-darkest:   #1a1a1a;
-$black:          #000;
-$orange-lighter: #feddb7;
-$orange-light:   #fdbe77;
-$orange:         #ff8c00;
-$orange-dark:    #e67812;
-$orange-darker:  #d66000;
+$white:             #fff;
+$grey-lightest:     #f2f2f2;
+$grey-lighter:      #bdbdbf;
+$grey-light:        #949498;
+$grey:              #6c6c72;
+$grey-dark:         #454548;
+$grey-darker:       #2d2d33;
+$grey-darkest:      #17171a;
+$black:             #000;
+$orange-lighter:    #ffd2b2;
+$orange-light:      #ffa666;
+$orange:            #ff791a;
+$orange-dark:       #e66000;
+$orange-darker:     #cc5500;
+$turquoise-lighter: #a2f2fa;
+$turquoise-light:   #50d7e5;
+$turquoise:         #0098a8;
+$turquoise-dark:    #00818f;
+$turquoise-darker:  #006a75;
 
 // // brand colours
 // $b-red: #ff0000;
