--- a/_assets/sass/nav/_site.scss
+++ b/_assets/sass/nav/_site.scss
@@ -3,7 +3,7 @@
 $site-nav-height:    56px;
 $site-nav-height-sm: 44px;
 $nav-width-bp:       640px;
-$nav-color:          $orange-dark;
+$nav-color:          $black;
 
 
 // global site nav height
@@ -18,7 +18,7 @@ $nav-color:          $orange-dark;
 
 .site-nav {
   position: relative;
-  background-color: rgba($nav-color,.8);
+  background-color: rgba($nav-color,0);
   text-align: center;
 
   // NEEDS EXPLAINING LIKE THE CORE NAV OFFSET
@@ -95,7 +95,7 @@ $nav-color:          $orange-dark;
     color: $white;
     transition: background-color $transition-time ease;
     white-space: nowrap;
-    &.is-current      { background-color: rgba($nav-color,.66); }
+    &.is-current      { background-color: rgba($white,.1); }
     .no-touch &:hover { background-color: rgba($nav-color,1); }
     @include bp($nav-width-bp){
       padding-left: $s0;
