--- a/_assets/sass/page/_banner.scss
+++ b/_assets/sass/page/_banner.scss
@@ -10,9 +10,9 @@
   min-height: 450px;
   max-height: 700px;
   color: $white;
-  background-color: $grey;
+  background-color: $black;
+  overflow: hidden;
   @include bp($lg){
-    height: 90%;
     min-height: 650px;
     max-height: none;
   }
@@ -36,16 +36,7 @@
     z-index: $z-content;
     background-color: $grey-dark;
     @include background-attributes;
-    // &:before {
-    //   // optional colour overlay on bg image
-    //   content: '';
-    //   position: absolute;
-    //   top: 0;
-    //   left: 0;
-    //   right: 0;
-    //   bottom: 0;
-    //   background-color: rgba($black,.15);
-    // }
+
   }
   &__nav {
     // optional container for navigation include
@@ -57,6 +48,39 @@
     &--top {
       top: 0;
       bottom: auto;
+    }
+  }
+  &__bg-video {
+    position: absolute;
+    z-index: 0;
+    top: 0; left: 0;
+    width: 100%;
+    min-height: 100%;
+    //max-height: 700px;
+    & video {
+      position: absolute;
+      top: 0; left: 50%;
+      transform: translateX(-60%);
+      height: 100%;
+      //max-height: 700px;
+      margin: auto;
+      opacity: 1;
+      @include bp($lg){
+          position: absolute;
+          top: 0; left: 50%;
+          transform: translateX(-50%);
+          height: 100%;
+          //max-height: 700px;
+          margin: auto;
+          opacity: 1;
+      }
+    }
+    &:before {
+      content: "";
+      display: block;
+      width: 100%;
+      padding-top: 56.25%;
+      @include bp($lg){}
     }
   }
 }
