--- a/_includes/page/promo-signup.html
+++ b/_includes/page/promo-signup.html
@@ -1,4 +1,4 @@
-<div class="vpad--xxxl bg--img" style="background-image: url('{{site.img}}/img.jpg');">
+<div class="vpad--xxxl bg--img" style="background-image: url('{{site.img}}/content/gewinnspiel/hero.jpg'); background-position: bottom;">
   <div class="container container--xl">
     <div class="text--center text--white">
       <h2 class="title title--xl">Sign up for our service</h2>
