--- a/_includes/page/banner-video.html
+++ b/_includes/page/banner-video.html
@@ -5,9 +5,9 @@
     <div class="container text--center text--white">
       <div class="banner__title">
 
-        {% if page.banner.title-sup %}<h2 class="sub-title  sub-title--lg  sub-title  text--bold text--upper">{{page.banner.title-sup}} </h2>{% endif %}
+        {% if page.banner.title-sup %}<h2 class="sub-title  sub-title--md  sub-title  text--bold text--upper">{{page.banner.title-sup}} </h2>{% endif %}
         <h1 class="banner-title {{page.banner.title-size}}">{% if page.banner.title %}{{page.banner.title}}{% else %}{{page.title}}{% endif %}</h1>
-        {% if page.banner.title-sub %}<h2 class="sub-title sub-title--lg  text--bold text--upper">{{page.banner.title-sub}}</h2>{% endif %}
+        {% if page.banner.title-sub %}<h2 class="sub-title sub-title--md text--bold text--upper">{{page.banner.title-sub}}</h2>{% endif %}
 
       </div>
       <div class="space--md"></div>
