--- a/_includes/modal/sections.html
+++ b/_includes/modal/sections.html
@@ -19,7 +19,7 @@
           <div class="bg-img bg-img--16-9" style="background-image: url('{{site.img}}/content/{{page.id}}/safari/{{section.id}}.jpg');">
             {% if item.image-credit %}<div class="bg-img__attribution js-image-attribution">{{section.image-credit}}</div>{% endif %}
           </div>
-          <div class="modal__content text--center content-spacing">
+          <div class="modal__content content-spacing">
             <h3 class="title title--md title--core">{{section.title}}</h3>
             <p>{{section.description}}</p>
             <div class="space--md"></div>
