--- a/_assets/sass/components/_offer.scss
+++ b/_assets/sass/components/_offer.scss
@@ -32,9 +32,9 @@ $offer-max-width: 600px;
   }
   &__content {
     padding: $s2;
-    border-left: 1px solid $grey-lighter;
-    border-right: 1px solid $grey-lighter;
-    border-bottom: 1px solid $grey-lighter;
+    //border-left: 1px solid $grey-lighter;
+    //border-right: 1px solid $grey-lighter;
+    //border-bottom: 1px solid $grey-lighter;
     background-color: $white;
   }
   &__location {
