--- a/_assets/sass/typography/_text.scss
+++ b/_assets/sass/typography/_text.scss
@@ -2,7 +2,8 @@
 
 .text {
   // sizes
-  &--xxl { font-size: 1.2rem; line-height: 1.6; letter-spacing: 0; }
+  &--xxxl { font-size: 1.35rem; line-height: 1.6; letter-spacing: 0; }
+  &--xxl { font-size: 1.25rem; line-height: 1.6; letter-spacing: 0; }
   &--xl  { font-size: 1.15rem; line-height: 1.6; letter-spacing: 0; }
   &--lg  { font-size: 1.05rem; letter-spacing: 0; }
   &--sm  { font-size: .8rem; }
@@ -22,6 +23,7 @@
   // colours
   &--white { color: $grey-lightest; }
   &--black { color: $grey-dark; }
+  &--yellow { color: $bv-yellow; }
 
   // alignment
   &--left   { text-align: left; }
