--- a/_includes/offer/all-offers.html
+++ b/_includes/offer/all-offers.html
@@ -1,5 +1,5 @@
 {% include offer/variables.html %}
-
+<div class="bg--light">
 <div class="container vpad--xxxl">
   <div class="row row--xl-6-6 row--gutters-lg">
     {% for offer in offers-by-price %}
@@ -8,4 +8,5 @@
       </div>
     {% endfor %}
   </div>
+</div>
 </div>
