--- a/_includes/page/promo-signup.html
+++ b/_includes/page/promo-signup.html
@@ -1,13 +1,14 @@
-<div class="vpad--xxxl bg--img" style="background-image: url('{{site.img}}/content/gewinnspiel/hero.jpg'); background-position: bottom;">
-  <div class="container container--xl">
+<div class="vpad--xxxxl bg--img" style="background-image: url('{{site.img}}/content/gewinnspiel/hero.jpg'); background-position: center 20% ; ">
+  <div class="container container--xl" style="">
     <div class="text--center text--white">
-      <h2 class="title title--xl">Sign up for our service</h2>
+      <h1 class="title title--xxxl" style="font-family: 'Source Serif Pro', Georgia, serif; ">Gewinnspiel</h1>
+        <div class="space--md"></div>
       <div class="width width--lg">
-        <p class="text--xxl text--normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolores laborum illum officia, repudiandae quas deleniti culpa dolorum quae voluptatum!</p>
+        <p class="title title--sm text--normal">Gewinnen Sie eine Fotoreise nach Südafrika – mit Ihrer eigenen Nikon Kamera.</p>
       </div>
       <div class="space--md"></div>
-      <div class="width width--md text--left">
-        {% include page/signup-form.html %}
+      <div class="width width--md ">
+  <a href="{{site.baseurl}}{{destination.url}}" class="btn btn--orange">Mehr erfahren</a>
       </div>
     </div>
   </div>
