--- a/_includes/page/reiserouten/reiserouten2-ie.html
+++ b/_includes/page/reiserouten/reiserouten2-ie.html
@@ -8,6 +8,7 @@
     <div class="width width--xxl">
        <div class="text text--xl text--center">
          <h2 class="title title--md text--semibold text--upper text--bv-grey">Küstenspektakel in Irland</h2>
+         <p>{{section.intro}}</p>
        </div>
     </div>
   </div>
