--- a/_assets/sass/components/_buttons.scss
+++ b/_assets/sass/components/_buttons.scss
@@ -1,13 +1,13 @@
 .btn {
   position: relative;
   display: inline-block;
-  padding: $s1 $s4;
+  padding: $s1 $s3;
   color: $white;
   font-weight: 700;
   font-size: $s-1;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: .2em;
+  letter-spacing: .13em;
   border-radius: 3px;
   cursor: pointer;
   @include transition;
@@ -18,6 +18,9 @@
   }
   &--turquoise { background-color: $turquoise;
     &:hover { background-color: $turquoise-dark; }
+  }
+  &--white { background-color: $white; color: $black;
+    &:hover { background-color: rgba($white, .8); }
   }
   &--outline {
     color: inherit;
