--- a/_includes/page/reiserouten/reiserouten1.html
+++ b/_includes/page/reiserouten/reiserouten1.html
@@ -1,23 +1,14 @@
 {% for section in site.data.reiserouten1 %}
 
 
-<div class="vpad--lg bg--light" id="{{section.id}}">
-    <div class="container">
-      <div class="space--xl"></div>
-    <div class="width width--xxl">
-       <div class="text text--xl text--center">
-         <h2 class="title title--lg text--bold">{{section.title}}</h2>
-       </div>
-    </div>
-  </div>
-</div>
+{% include page/reiserouten/intro.html %}
 
 
 
-<div id="jssor_1" class="bv-slider">
+<div id="jssor_1" class="bv-slider" >
        <!-- Loading Screen -->
 
-       <div data-u="slides" class="bv-slides-wrap" >
+       <div data-u="slides" class="bv-slides-wrap " >
            {% for poi in section.pois.items %}
            <div>
                <div class="bv-slides" data-u="image" style="background-image: url('{{site.img}}/content/{{page.id}}/slider{{section.num}}/{{poi.id}}.jpg'); background-size: cover; background-position: center bottom;">
