--- a/_includes/page/reiserouten/reiserouten3-ie.html
+++ b/_includes/page/reiserouten/reiserouten3-ie.html
@@ -7,6 +7,7 @@
     <div class="width width--xxl">
        <div class="text text--xl text--center">
          <h2 class="title title--md text--semibold text--upper text--bv-grey">Toskanische Highlights</h2>
+         <p>{{section.intro}}</p>
        </div>
     </div>
   </div>
